<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/et_movie_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:singleLine="true"
            android:tag="search"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:imeOptions="actionDone"/>

        <TextView
            android:id="@+id/tv_search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/custom_icon_font"
            android:text="@string/search_icon"
            android:textColor="@color/colorAccent"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="@id/et_movie_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/et_movie_search"
            app:layout_constraintTop_toTopOf="@id/et_movie_search" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movies_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/et_movie_search"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/ItemLabel"
            android:text="@string/not_found"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>